<resources>
    <string name="app_name">Flash Loyalty App</string>
    <string name="news">News</string>
    <string name="pre_order">Pre-Order</string>
    <string name="branch">Branches</string>
    <string name="points">Points</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="state">State</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="signin">Sign In</string>
    <string name="signup_prompt">New User?\nSign Up!</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="email_example">E.g. johndoe@gmail.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notification">Notification</string>
    <string name="required_input">*Required</string>
    <string name="incorrect_login">Incorrect username or password</string>
    <string name="login_successful">Login successful</string>
    <string name="user_id">UserID</string>
    <string name="input_mismatch">Password do not match</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_exists">Username exists</string>
    <string name="update_successful">Update Successful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="forget_password_message">Sent password reset instruction to the email associated with the username.</string>
    <string name="reset_code">Reset Code</string>
    <string name="invalid_reset_code">Invalid Reset Code</string>
    <string name="password_reset_successful">Password Reset Successful</string>
    <string name="reward_successful">Successfully redeemed reward!</string>
    <string name="code_successful">Code redeemed successful!</string>
    <string name="code_fail">Invalid code or expired code</string>
    <string name="reward_fail">Not enought points to redeem reward!</string>
</resources>