<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_pre_order"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/pre_order" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/branch" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/ic_baseline_stars_24"
            android:title="@string/points" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />
    </group>
</menu>